Fixed various things. Added media under 768px, changed max width in card to 960px

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -70,3 +70,22 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+p {
+  color: #8ecccc;
+}
+
+li {
+  display: inline;
+  float: left;
+  margin: 2px;
+
+  border: solid 2px #3a4042;
+  border-radius: 4px;
+}
+
+a {
+  display: block;
+  padding: 8px;
+  background-color: #212121;
+}
